--- a/STGeometry/STGeometry.csproj
+++ b/STGeometry/STGeometry.csproj
@@ -72,7 +72,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
-    <None Include="stgeometry\linux\st_geometry.so" />
+    <None Include="stgeometry\linux\postgres\9.4\st_geometry.so" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
